<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/profile_image_card_view_id"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:cardCornerRadius="10sp"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/me_red_photo" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10sp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.6"
        app:layout_constraintTop_toBottomOf="@id/profile_image_card_view_id">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10sp"
                    android:layout_marginTop="20sp"
                    android:text="Personal"
                    android:textColor="@color/profile_header"
                    android:textSize="20sp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/name_title_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30sp"
                        android:text="Name:"
                        android:textColor="@color/profile_sub_header"
                        android:textSize="15sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10sp"
                        android:layout_toRightOf="@id/name_title_id"
                        android:text="@string/my_name"
                        android:textSize="15sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3sp">

                    <TextView
                        android:id="@+id/birthday_title_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30sp"
                        android:text="Birthday:"
                        android:textColor="@color/profile_sub_header"
                        android:textSize="15sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10sp"
                        android:layout_toRightOf="@id/birthday_title_id"
                        android:text="@string/birthday_text"
                        android:textSize="15sp" />
                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10sp"
                    android:layout_marginTop="20sp"
                    android:text="Education"
                    android:textColor="@color/profile_header"
                    android:textSize="20sp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/college_title_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30sp"
                        android:text="College:"
                        android:textColor="@color/profile_sub_header"
                        android:textSize="15sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10sp"
                        android:layout_toRightOf="@id/college_title_id"
                        android:text="@string/cmu_text"
                        android:textSize="15sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/concentration_title_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30sp"
                        android:text="Area:"
                        android:textColor="@color/profile_sub_header"
                        android:textSize="15sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10sp"
                        android:layout_toRightOf="@id/concentration_title_id"
                        android:text="@string/specialization_a_string"
                        android:textSize="15sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/degree_title_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30sp"
                        android:text="Degree:"
                        android:textColor="@color/profile_sub_header"
                        android:textSize="15sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10sp"
                        android:layout_toRightOf="@id/degree_title_id"
                        android:text="@string/degree_text"
                        android:textSize="15sp" />
                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10sp"
                    android:layout_marginTop="20sp"
                    android:text="Hiring Status"
                    android:textColor="@color/profile_header"
                    android:textSize="20sp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/hiring_title_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30sp"
                        android:text="Ready for:"
                        android:textColor="@color/profile_sub_header"
                        android:textSize="15sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10sp"
                        android:layout_toRightOf="@id/hiring_title_id"
                        android:text="@string/internship_text"
                        android:textSize="15sp" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="20sp"
                        android:text="Skills and Gallery"
                        android:textColor="@color/black"
                        android:textSize="20sp" />
                </LinearLayout>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_to_skills_id"
                    android:layout_width="match_parent"
                    android:layout_height="120sp"
                    android:layout_marginTop="20sp"
                    android:layout_marginBottom="20sp"
                    app:cardCornerRadius="10sp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/skills_image" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="120sp"
                    android:id="@+id/card_to_gallery_id"
                    android:layout_marginTop="10sp"
                    android:layout_marginBottom="20sp"
                    app:cardCornerRadius="10sp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/gallery_go_image" />
                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </ScrollView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>